--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "chai": "^4.2.0"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "save": "^2.4.0"
   }
 }
