sequalize , aout-sequlize, mysql

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "vidy api",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "nodemon index.js",
+    "createModels":"sequelize-auto -h localhost -d blog -u root -e mysql"
   },
   "repository": {
     "type": "git",
@@ -30,6 +32,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "save": "^2.4.0"
+    "mysql2": "^1.7.0",
+    "save": "^2.4.0",
+    "sequelize": "^5.18.2"
   }
 }
